Try to prevent buttons from selecting on mobile

--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ button {
   height: 70px;
   transition: all 0.2s;
   touch-action: manipulation;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
